fixed the overflow hidden for services

--- a/src/layouts/services/services.scss
+++ b/src/layouts/services/services.scss
@@ -2,6 +2,7 @@
 
 .services {
   margin-bottom: 60px;
+  padding-bottom: 15px;
   overflow: hidden;
 
   .services__body {
